--- a/index.html
+++ b/index.html
@@ -117,7 +117,15 @@
                 <div class="input_wrap">
                 <input class="form_input" type="email" name="" placeholder="E-mail">
                 <input class="form_input" type="text" name="" placeholder="Тематика сайту">
+                <select class="form_select">
+                    <option>Сайт-візитка</option>
+                    <option>Корпоративний сайт</option>
+                    <option>Інтернет-Магазин</option>
+                    <option>Дизайн</option>                   
+                    <option>Підтримка сайтів</option>
+                  </select>
                 </div>
+
                 <textarea class="form_textarea" placeholder="Опишіть ідею сайту" cols="100" rows="4"></textarea>
                 <button class="form_submit"></button>
             </div>
