--- a/faq.html
+++ b/faq.html
@@ -28,7 +28,7 @@
         <div class="FAQ_wrap">
         <h1 class="FAQ_tittle">Відповіді на ваші часті запитання</h1>
         <h2 class="que">Хто ми?</h2>
-        <p class="ans">Ми Товариство з обмеженою відповідальністю «Global_IT». Ми надаємо послуги по створенню та підтримці сайтів. </p>
+        <p class="ans">Ми компанія «Global_IT». Ми надаємо послуги по створенню та підтримці сайтів. </p>
         <h2 class="que">Які саме сайти ви створюєте?</h2>
         <p class="ans">Ви можете ознайомитись с переліокм послуг на сторінці <a href="catalog.html">Послуги</a>.</p>
         <h2 class="que">Як відбувається оплата?</h2>
