--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content='width=1300' />
+    <meta name="keywords" content="Global_IT, веб-студія, сайти на заказ, сайти під ключ, лендінги, інтернет-магазин,онлайн-магазин,замовити сайт, розробка сайтів" />
+    <meta name="description" content="Ми Global_IT.Веб-студія, основні продукти якої - розробка сайтів та підтримка готових проектів.Створимо сайт, який буде виділяти вашу компанію на фоні конкурентів!">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <title>Global_IT</title>
+    <title>Global_IT - Перетворимо вашу ідею в сайт</title>
 </head>
 <body>
     <div class="firstBlock">
